添加致敬材料蓝钢 添加一些配方(工作台合成机壳)

--- a/src/main/resources/assets/asod/lang/zh_cn.json
+++ b/src/main/resources/assets/asod/lang/zh_cn.json
@@ -2,6 +2,7 @@
   "creativetab.asod_tab_1": "工匠:命运群星",
 
   "item.asod.tanpowasd": "是作者呢",
+  "item.asod.inotc_blue_steel": "蓝...蓝钢??",
 
   "fluid.asod.molten_tanpowasd": "测试液体",
   "fluid.tconstruct.molten_tanpowasd": "测试液体",
